--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "author": "Abhishek Kedia",
   "license": "ISC",
   "dependencies": {
+    "dockerode": "^3.3.5",
     "dotenv": "^16.0.3",
     "express": "^4.18.2"
   }
