--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "dockerode": "^3.3.5",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
+    "multer": "^1.4.5-lts.1",
     "uuid": "^9.0.0"
   }
 }
