--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "start": "node server.js",
-    "dev": "nodemon server.js",
+    "dev": "nodemon --signal SIGUSR2 server.js",
     "create:image": "node ./docker/create-image.js",
     "start:server": "pm2 stop server.js && pm2 start server.js",
     "test": "echo \"Error: no test specified\" && exit 1"
