--- a/package.json
+++ b/package.json
@@ -13,10 +13,12 @@
   "author": "Abhishek Kedia",
   "license": "ISC",
   "dependencies": {
+    "cors": "^2.8.5",
     "dockerode": "^3.3.5",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "multer": "^1.4.5-lts.1",
+    "tar": "^6.1.13",
     "uuid": "^9.0.0"
   }
 }
