--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Code compare backend",
   "main": "index.js",
   "scripts": {
-    "start": "node ./utils/install-docker.js && node server.js",
+    "start": "node server.js",
     "dev": "nodemon --signal SIGUSR2 server.js",
     "create:image": "node ./docker/create-image.js",
     "start:server": "pm2 stop server.js && pm2 start server.js",
@@ -17,8 +17,7 @@
     "dockerode": "^3.3.5",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
-    "multer": "^1.4.5-lts.1",
     "tar": "^6.1.13",
-    "uuid": "^9.0.0"
+    "winston": "^3.8.2"
   }
 }
