--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "dockerode": "^3.3.5",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
+    "nodemon": "^2.0.22",
     "tar": "^6.1.13",
     "winston": "^3.8.2"
   }
